Angular models and services

--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,1 +1,6 @@
-<p>category works!</p>
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let category of ">
+    
+    </li>
+    
+  </ul>
