--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,6 +1,13 @@
-<ul class="list-group">
-    <li class="list-group-item" *ngFor="let category of ">
-    
-    </li>
-    
-  </ul>
+<ul class="list-group mt-4 categories-list">
+  <li [class]="getAllCategoryClass()" routerLink="/products">TÜM ÜRÜNLER</li>
+  <li
+    (click)="setCurrentCategory(category)"
+    routerLink="/products/category/{{ category.categoryId }}"
+    [class]="getCurrentCategoryClass(category)"
+    *ngFor="let category of categories"
+  >
+    {{ category.categoryId }} - {{ category.categoryName }}
+  </li>
+</ul>
+
+<h5 *ngIf="currentCategory">{{ currentCategory.categoryName }} seçtiniz.</h5>
